# memory_phone

memory-phone-pcb/: #auto_saved_files#  fp-info-cache  fp-lib-table  memory-phone-pcb BOM.html  memory-phone-pcb.kicad_pcb  memory-phone-pcb.kicad_prl  memory-phone-pcb.kicad_pro  memory-phone-pcb.kicad_sch  sym-lib-table
memory-phone-pcb/gerbers/: memory-phone-pcb-B_Cu.gbl  memory-phone-pcb-B_Mask.gbs  memory-phone-pcb-B_Paste.gbp  memory-phone-pcb-B_Silkscreen.gbo  memory-phone-pcb-Edge_Cuts.gm1  memory-phone-pcb-F_Cu.gtl  memory-phone-pcb-F_Mask.gts  memory-phone-pcb-F_Paste.gtp  memory-phone-pcb-F_Silkscreen.gto  memory-phone-pcb-NPTH.drl  memory-phone-pcb-PTH.drl  memory-phone-pcb-job.gbrjob
memory-phone-pcb/libs/: MemoryPhone_sym.bak  MemoryPhone_sym.kicad_sym
memory-phone-pcb/libs/MemoryPhone_footprints.pretty/: DM3D-SF.kicad_mod  RP2040-QFN-56.kicad_mod  TC33X-1.kicad_mod  W25Q16JVSSIQ.kicad_mod  XTAL_ECS-120-8-36B-CWY-TR.kicad_mod
pico-code/memory_phone/: CMakeLists.txt  main.c  test.h
pico-code/memory_phone/lib/mic/: CMakeLists.txt
pico-code/sd_test/: CMakeLists.txt
pico-code/sd_test_2/: .gitignore  CMakeLists.txt  main.c
